--- a/.github/workflows/jwinget.yaml
+++ b/.github/workflows/jwinget.yaml
@@ -27,6 +27,24 @@ jobs:
          $URL = ("https://www.jsoftware.com/download/$env:Folder/install/j" + $env:Version + "_win64.exe")
          wingetcreate.exe update $env:ID -u $URL -v $env:Version -t ${{ secrets.JWINGET_TOKEN }}
 
+  wingetslim:
+    name: Update Winget Slim
+    runs-on: windows-latest
+    steps:
+      - name: Checkout Git Repository
+        uses: actions/checkout@v3
+
+      - name: Get Latest Version
+        shell: pwsh
+        run: |
+         script\get_version.ps1
+
+      - name: Install winget
+        uses: Cyberboss/install-winget@v1
+
+      - name: Install wingetcreate
+        run: winget install wingetcreate --disable-interactivity --accept-source-agreements
+
       - name: Update Winget (Slim)
         shell: pwsh
         run: |
